--- a/fonts/style.css
+++ b/fonts/style.css
@@ -1,9 +1,9 @@
 @font-face {
     font-family: 'Circular Std';
-    src: local('Circular Std Medium'), local('Circular-Std-Medium'),
-        url('CircularStd-Medium.woff2') format('woff2'),
-        url('CircularStd-Medium.woff') format('woff'),
-        url('CircularStd-Medium.ttf') format('truetype');
+    src: local('fontsCircular Std Medium'), local('Circular-Std-Medium'),
+        url('../fonts/CircularStd-Medium.woff2') format('woff2'),
+        url('../fonts/CircularStd-Medium.woff') format('woff'),
+        url('../fonts/CircularStd-Medium.ttf') format('truetype');
     font-weight: 500;
     font-style: normal;
   }
