--- a/scss/common/common.scss
+++ b/scss/common/common.scss
@@ -1,5 +1,5 @@
 .container {
-  width: 1250px;
+  max-width: 1250px;
   padding: 0 15px;
   margin: 0 auto;
 }
@@ -14,4 +14,36 @@ a:hover:after {
   content: "";
   width: 100%;
   border-bottom: 2px solid #000;
+}
+
+/* media */
+
+@media (max-width: 1280px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 992px;
+  }
+}
+
+@media (max-width: 992px) {
+  .container {
+    max-width: 767px;
+  }
+}
+
+@media (max-width: 767px) {
+  .container {
+    max-width: 567px;
+  }
+}
+
+@media (max-width: 567px) {
+  .container {
+    max-width: 320px;
+  }
 }
