--- a/scss/components/header/header.scss
+++ b/scss/components/header/header.scss
@@ -10,9 +10,16 @@
     align-items: center;
   }
 
-  .header__search {
+  aside {
+    img {
+      margin-right: 25px;
+    }
+  }
+
+  &__search {
     label {
       display: flex;
+      margin-left: 10px;
       gap: 15px;
     }
 
@@ -25,16 +32,17 @@
     }
   }
 
-  .header__nav {
+  &__nav {
     ul {
       display: flex;
       gap: 42px;
+      margin-right: 20px;
     }
   }
 
-  .header__icons {
+  &__icons {
     display: flex;
-    gap: 25px;
+    gap: 10px;
 
     a:hover:after {
       display: none;
